* Fixed coursepicker dropdown z-index issue

--- a/muikku/src/main/webapp/resources/theme-muikku/sass/flex/flex-main-functionality.scss
+++ b/muikku/src/main/webapp/resources/theme-muikku/sass/flex/flex-main-functionality.scss
@@ -56,6 +56,7 @@
     padding: 0;
     width: 100%;
     border:1px solid $brd;
+    z-index:1;
     
     li {
       font-size:0.9em;   
